2015-10-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* auth-source.el: Add eval-and-compile to autoloads for
	epg-context-set-passphrase-callback, epg-decrypt-string,
	epg-encrypt-string, and epg-context-set-armor.

2015-10-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mailcap.el (mailcap-mime-data): Remove fboundp checks.
	(mailcap-viewer-passes-test): Do it instead.  Thanks to Stefan Monnier.

2015-10-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mailcap.el (mailcap-mailcap-entry-passes-test): Doc fix.

2015-10-20  Michael Sperber  <mike@xemacs.org>

	* mailcap.el (mailcap-mime-data): Conditonalize `doc-view-mode', which
	does not exist on XEmacs.

2015-10-18  Michael Sperber  <mike@xemacs.org>

	* nnml.el (nnml-retrieve-groups, nnml-request-scan):
	* nnmail.el (nnmail-get-new-mail-per-group):
	(nnmail-get-new-mail-1): Unbreak `group' option for `mail-sources'.

2015-10-18  Michael Sperber  <mike@xemacs.org>

	* message.el (message-get-reply-headers): In addition to
	`mail-dont-reply-to-names', bind `rmail-dont-reply-to-names', which is
	used in XEmacs.

2015-10-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* auth-source.el (auth-source-epa-make-gpg-token): Revert.

2015-10-11  Nicolas Petton  <petton.nicolas@gmail.com>

	* auth-source.el (auth-source-epa-make-gpg-token):
	Replace an usage of `epg-context-set-armor' with `setf'.
	(auth-source-do-debug, auth-source-do-trivia)
	(auth-source-read-char-choice, auth-source-search)
	(auth-source-pick-first-password, auth-source-netrc-parse)
	(auth-source-netrc-search, auth-source-secrets-search)
	(auth-source-macos-keychain-search)
	(auth-source-macos-keychain-search-items, auth-source-plstore-search)
	(auth-source-user-or-password): Use sharp-quoting with functions.

2015-09-30  Wieland Hoffmann  <themineo@gmail.com>

	* auth-source.el (auth-source-search): Clarify :create's meaning.

2015-09-17  Paul Eggert  <eggert@cs.ucla.edu>

	Backslash cleanup in Elisp source files
